compiler/testData/diagnostics/tests/java8Overrides/hidingMethodOfAny.kt
interface IA {
    <!VIRTUAL_MEMBER_HIDDEN!>fun toString(): String<!> = "IB"

    override fun equals(other: Any?): Boolean
}